# switchyard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: AGENT_INTERFACE.md  API.md  ARCHITECTURE.md  MCP.md  PUBLISHING_LOCAL.md  RELEASE.md  index.md
docs/assets/stylesheets/: extra.css
examples/: fullstack.toml  switchyard.toml
scripts/: benchmark.py  concurrency_smoke.py  e2e_smoke.py  mcp_project_smoke.py  release_check.py
skills/switchyard/: SKILL.md
skills/switchyard/agents/: openai.yaml
src/switchyard/: __init__.py  cli.py  config.py  envsync.py  gittools.py  mcp.py  proxy.py  registry.py  runtime.py  utils.py
src/switchyard/assets/skills/switchyard/: SKILL.md
tests/: test_cli.py  test_config.py  test_envsync.py  test_mcp.py  test_proxy.py  test_registry.py  test_runtime.py  test_utils.py
tests/fixtures/: mcp_action_smoke.jsonl  mcp_readonly_smoke.jsonl
