[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "switchyard-dev"
version = "0.1.0"
description = "Local runtimes for parallel agent worktrees."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Switchyard Contributors" }]
keywords = ["agents", "git-worktree", "localhost", "devtools", "process-manager"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hwennnn/switchyard"
Issues = "https://github.com/hwennnn/switchyard/issues"

[project.scripts]
switchyard = "switchyard.cli:main"
sy = "switchyard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/switchyard"]
