[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "switchyard-dev"
dynamic = ["version"]
description = "Local HTTP runtimes for parallel AI agent worktrees."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Switchyard Contributors" }]
keywords = ["agents", "ai-agents", "mcp", "git-worktree", "localhost", "devtools", "process-manager"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hwennnn/switchyard"
Repository = "https://github.com/hwennnn/switchyard"
Documentation = "https://github.com/hwennnn/switchyard#readme"
Issues = "https://github.com/hwennnn/switchyard/issues"

[project.scripts]
switchyard = "switchyard.cli:main"
sy = "switchyard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/switchyard"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/src",
]

[tool.hatch.version]
path = "src/switchyard/__init__.py"
